migrate to new release process