@@ -1,15 +1,16 @@
 plugins {
-    id 'net.researchgate.release' version '3.1.0'
-    id 'uk.gov.laa.springboot.laa-spring-boot-gradle-plugin' version '2.3.7'
+    id 'uk.gov.justice.service.laa.laa-spring-boot-gradle-plugin' version '3.0.1'
     id 'com.diffplug.spotless' version '8.9.0'
+}
+
+configurations {
+    mockitoAgent {
+        transitive = false
+    }
 }
 
 subprojects {
     group = 'uk.gov.laa.ccms.caab'
-}
-
-release {
-    tagTemplate = '$name-$version'
 }
 
 repositories {
@@ -74,44 +75,18 @@ configurations.configureEach {
             details.useVersion '5.4.3'
             details.because 'Temporary override'
         }
+        if (details.requested.group == 'org.bouncycastle') {
+            details.useVersion '1.85'
+            details.because 'Temporary override to remediate vulnerability'
+        }
+        if (details.requested.group == 'io.netty') {
+            details.useVersion '4.2.16.Final'
+            details.because 'Temporary override to remediate vulnerability'
+        }
     }
 }
 
 dependencies {
-
-    /**
-     * Vulnerabilities - Transitive dependency overrides (remove when bumped in parent library)
-     */
-    constraints {
-// 		// Example
-//		implementation('group:name:version') {
-//			because('Fixes CVE-XXXX-XXXXX Parent: parent-group:parent-name')
-//		}
-
-        implementation('org.bouncycastle:bcprov-jdk18on:1.85') {
-            because('Fixes multiple CVEs Parent: org.opensaml:opensaml-saml-api')
-        }
-
-        implementation('org.bouncycastle:bcpkix-jdk18on:1.85') {
-            because('Fixes multiple CVEs Parent: org.opensaml:opensaml-saml-api')
-        }
-
-        implementation "org.opensaml:opensaml-saml-api:5.2.3"
-        implementation "org.opensaml:opensaml-saml-impl:5.2.3"
-
-    }
-
-    // Fixes CVE-2026-55831 - remove this when bumped in parent library:
-    // org.springframework.boot:spring-boot-starter-webflux
-    implementation 'io.netty:netty-codec:4.2.16.Final'
-    implementation 'io.netty:netty-codec-compression:4.2.16.Final'
-    implementation 'io.netty:netty-codec-dns:4.2.16.Final'
-    implementation 'io.netty:netty-codec-http:4.2.16.Final'
-    implementation 'io.netty:netty-codec-http2:4.2.16.Final'
-    implementation 'io.netty:netty-codec-http3:4.2.16.Final'
-    
-    // Fixes CVE-2025-48924 - remove this when bumped in parent library
-    implementation 'org.apache.commons:commons-lang3:3.20.0'
 
     implementation 'uk.gov.laa.ccms.data:data-api:0.0.110'
 
@@ -177,13 +152,16 @@ dependencies {
     testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
     testImplementation 'org.testcontainers:testcontainers-localstack'
 
+    mockitoAgent "org.mockito:mockito-core"
 }
 
 test {
     useJUnitPlatform()
 
-    // Hide warning for dynamic loading of agents https://github.com/mockito/mockito/issues/3037
-    jvmArgs '-XX:+EnableDynamicAgentLoading'
+    jvmArgs(
+            "-javaagent:${configurations.mockitoAgent.asPath}",
+            "-Xshare:off"
+    )
 
     finalizedBy jacocoTestReport
 }
@@ -216,20 +194,6 @@ spotless {
 
 tasks.withType(Checkstyle).configureEach {
     enabled = false
-}
-
-tasks.register('updateSnapshotVersion') {
-    doLast {
-        def gitHash = "git rev-parse --short HEAD".execute().text.trim()
-        def propertiesFile = file('gradle.properties')
-        def properties = new Properties()
-        properties.load(new FileInputStream(propertiesFile))
-
-        def currentVersion = properties.getProperty('version')
-        def newVersion = currentVersion.replace('-SNAPSHOT', "-${gitHash}-SNAPSHOT")
-        properties.setProperty('version', newVersion)
-        properties.store(propertiesFile.newWriter(), null)
-    }
 }
 
 /**
